--- a/UmbraString.Benchmarks/UmbraString.Benchmarks.csproj
+++ b/UmbraString.Benchmarks/UmbraString.Benchmarks.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\UmbraString.Tests.Assets\UmbraString.Tests.Assets.csproj" />
     <ProjectReference Include="..\UmbraString\UmbraString.csproj" />
   </ItemGroup>
 
