--- a/UmbraString/UmbraString.csproj
+++ b/UmbraString/UmbraString.csproj
@@ -26,7 +26,7 @@
   </PropertyGroup>
 
   <ItemGroup Label="README reference">
-    <None Include="README.md" Pack="true" PackagePath="\" />
+    <None Include="..\README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
 </Project>
